--- a/src/nz/otot/UrPhase1/UI/Display.form
+++ b/src/nz/otot/UrPhase1/UI/Display.form
@@ -11,15 +11,17 @@
       <component id="9d53a" class="javax.swing.JTextField" binding="inputField">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="150" height="20"/>
           </grid>
         </constraints>
         <properties>
           <background color="-6515308"/>
           <font name="Monospaced" size="12" style="0"/>
+          <text value=""/>
+          <toolTipText value="Put Move here"/>
         </properties>
       </component>
-      <scrollpane id="89de9">
+      <scrollpane id="89de9" binding="scroll">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="400" height="500"/>
